syntax = "proto3";

import "raft_log_entry.proto";

message raft_test_log {
  raft_log_state state = 1;
  repeated raft_log_entry entries = 2;
}
